--- a/client/pages/js/index.html
+++ b/client/pages/js/index.html
@@ -14,7 +14,7 @@
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
       <div class="flex items-center gap-2">
         <img src="https://cdn-icons-png.flaticon.com/512/2910/2910765.png" alt="Logo" class="w-8 h-8">
-        <span class="font-bold text-xl">Carbon Tracker</span>
+        <span class="font-bold text-xl">Carbon Footprint Tracker</span>
       </div>
       <nav class="space-x-6">
         <a href="#home" class="hover:text-green-400 transition">Home</a>
